# nba-info

./: LICENSE.txt  README.md  manage.py  pyproject.toml  seed.py
nba_info/: asgi.py  settings.py  urls.py  wsgi.py
nba_info/contracts/: admin.py  apps.py  models.py  urls.py  views.py
nba_info/contracts/migrations/: 0001_initial.py  0002_alter_salary_options.py
nba_info/contracts/static/contracts/: style.css
nba_info/contracts/templates/contracts/: base.html  detail.html  index.html
nba_info/info/: apps.py  views.py
nba_info/info/management/commands/: seed.py
nba_info/players/: apps.py  models.py  urls.py  views.py
nba_info/players/migrations/: 0001_initial.py  0002_alter_player_team.py
nba_info/players/templates/players/: base.html  detail.html  index.html
nba_info/teams/: apps.py  models.py  urls.py  views.py
nba_info/teams/migrations/: 0001_initial.py
nba_info/teams/templates/teams/: base.html  detail.html  index.html
