[tool.poetry]
name = "nba-info"
version = "0.1.0"
description = "Information about NBA teams"
authors = ["Jared Sun <jaredsun1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
